force-app/main/default/objects/Captured_Event__c/Captured_Event__c.object-meta.xml
<CustomObject>
    <label>Captured Event</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Captured Event Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Captured Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>