force-app/main/default/objects/Captured_Event__c/fields/external_event_id__c.field-meta.xml
<CustomField>
    <fullName>external_event_id__c</fullName>
    <externalId>true</externalId>
    <label>external event id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>