force-app/main/default/objects/Captured_Event__c/fields/patience__c.field-meta.xml
<CustomField>
    <fullName>patience__c</fullName>
    <label>patience</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>