force-app/main/default/objects/Captured_Event__c/fields/Pos_X__c.field-meta.xml
<CustomField>
    <fullName>Pos_X__c</fullName>
    <label>Pos X</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>