force-app/main/default/objects/Captured_Event__c/fields/Pos_Y__c.field-meta.xml
<CustomField>
    <fullName>Pos_Y__c</fullName>
    <label>Pos Y</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>